--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^18.15.12",
     "apollo-server-core": "^3.12.0",
     "apollo-server-express": "^3.12.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "mongoose": "^7.0.4",
