--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
+    "@tanstack/react-query": "^4.29.5",
+    "graphql": "^16.6.0",
+    "graphql-request": "^6.0.0",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-safe-area-context": "^4.5.1",
