--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "graphql-request": "^6.0.0",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
     "react-native-vector-icons": "^9.2.0"
